# ms_arch

./: LICENSE  README.md
hw01/: Dockerfile  README.md  pyproject.toml
hw01/app/: main.py
